--- a/src/css/cssLibrary/general/_base.css
+++ b/src/css/cssLibrary/general/_base.css
@@ -3,6 +3,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    margin-left: calc(100vw - 100%); /*no jump from scroll*/
+}
 .container {
     max-width: 1440px;
     margin: 0 auto;
